// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Indexes with the correct html The correct links are included in the raw output 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
    <link rel="stylesheet"
          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding:1.142rem"
      >
        <nav>
          <ol style="padding:0;list-style:none;display:flex;height:100%;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="container"
           style="margin-top:10px"
      >
        <div class="row col-md-8 col-md-offset-2">
          <ul class="list-unstyled">
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="docs/index.html">
                <i class="fas fa-folder-open">
                </i>
                <span style="margin-left:5px">
                  docs
                </span>
              </a>
            </li>
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="folder/index.html">
                <i class="fas fa-folder-open">
                </i>
                <span style="margin-left:5px">
                  folder
                </span>
              </a>
            </li>
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="rootFile.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  rootFile.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <p>
              <a href="https://github.com/bbc/morty-docs">
                Morty-Docs on github
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html The correct links are included in the raw output 2`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
    <link rel="stylesheet"
          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding:1.142rem"
      >
        <nav>
          <ol style="padding:0;list-style:none;display:flex;height:100%;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo/folder"
              >
                folder
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="container"
           style="margin-top:10px"
      >
        <div class="row col-md-8 col-md-offset-2">
          <ul class="list-unstyled">
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="nestedFile.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  nestedFile.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <p>
              <a href="https://github.com/bbc/morty-docs">
                Morty-Docs on github
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html The correct links are included in the raw output 3`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
    <link rel="stylesheet"
          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding:1.142rem"
      >
        <nav>
          <ol style="padding:0;list-style:none;display:flex;height:100%;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo/docs"
              >
                docs
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="container"
           style="margin-top:10px"
      >
        <div class="row col-md-8 col-md-offset-2">
          <ul class="list-unstyled">
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="arch/index.html">
                <i class="fas fa-folder-open">
                </i>
                <span style="margin-left:5px">
                  arch
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <p>
              <a href="https://github.com/bbc/morty-docs">
                Morty-Docs on github
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html The correct links are included in the raw output 4`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
    <link rel="stylesheet"
          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding:1.142rem"
      >
        <nav>
          <ol style="padding:0;list-style:none;display:flex;height:100%;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo/docs"
              >
                docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo/docs/arch"
              >
                arch
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="container"
           style="margin-top:10px"
      >
        <div class="row col-md-8 col-md-offset-2">
          <ul class="list-unstyled">
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="furtherNestedFile.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  furtherNestedFile.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <p>
              <a href="https://github.com/bbc/morty-docs">
                Morty-Docs on github
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html to match snapshot with a colon in the filename 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
    <link rel="stylesheet"
          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding:1.142rem"
      >
        <nav>
          <ol style="padding:0;list-style:none;display:flex;height:100%;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="container"
           style="margin-top:10px"
      >
        <div class="row col-md-8 col-md-offset-2">
          <ul class="list-unstyled">
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="file%3Afoo1.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  file:foo1.html
                </span>
              </a>
            </li>
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="foo2.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  foo2.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <p>
              <a href="https://github.com/bbc/morty-docs">
                Morty-Docs on github
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html to match snapshot with a content title 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
    <link rel="stylesheet"
          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding:1.142rem"
      >
        <nav>
          <ol style="padding:0;list-style:none;display:flex;height:100%;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="container"
           style="margin-top:10px"
      >
        <div class="row col-md-6 col-md-offset-3"
             style="text-align:center;margin-bottom:20px"
        >
          <h1 style="font-size:32px">
            some-repo
          </h1>
        </div>
        <div class="row col-md-8 col-md-offset-2">
          <ul class="list-unstyled">
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="foo1.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  foo1.html
                </span>
              </a>
            </li>
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="foo2.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  foo2.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <p>
              <a href="https://github.com/bbc/morty-docs">
                Morty-Docs on github
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html to match snapshot with a pdf file 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
    <link rel="stylesheet"
          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding:1.142rem"
      >
        <nav>
          <ol style="padding:0;list-style:none;display:flex;height:100%;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="container"
           style="margin-top:10px"
      >
        <div class="row col-md-8 col-md-offset-2">
          <ul class="list-unstyled">
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="foo1.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  foo1.html
                </span>
              </a>
            </li>
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="foo2.pdf">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  foo2.pdf
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <p>
              <a href="https://github.com/bbc/morty-docs">
                Morty-Docs on github
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Generate Indexes with the correct html to match snapshot without a content title 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      Morty Docs
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
    <link rel="stylesheet"
          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;height:60px;margin-bottom:0;width:100%;padding:1.142rem"
      >
        <nav>
          <ol style="padding:0;list-style:none;display:flex;height:100%;align-items:center">
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs"
              >
                morty-docs
              </a>
            </li>
            <li>
              <span aria-hidden="true"
                    style="margin:0 0.28rem;color:#ebebeb"
              >
                /
              </span>
              <a style="text-align:left;color:lightblue;font-size:2rem"
                 href="/morty-docs/some-repo"
              >
                some-repo
              </a>
            </li>
          </ol>
        </nav>
      </div>
      <div class="container"
           style="margin-top:10px"
      >
        <div class="row col-md-8 col-md-offset-2">
          <ul class="list-unstyled">
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="foo1.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  foo1.html
                </span>
              </a>
            </li>
            <li class="index-list"
                style="font-size:1.6em;border-bottom:solid black 1px;margin-bottom:10px"
            >
              <a href="foo2.html">
                <i class="fas fa-file-alt">
                </i>
                <span style="margin-left:5px">
                  foo2.html
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <p>
              <a href="https://github.com/bbc/morty-docs">
                Morty-Docs on github
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;
